--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>Formulaire avec Bootstrap</title>
+  <title>Le plus beau formulaire</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Formulaire avec Bootstrap</h1>
+    <h1>Le plus beau formulaire</h1>
   </header>
 
   <main>
