Changer message à l'utilisateur

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div>
         <label for="ville">Ville: </label>
         <input type="text" name="ville" id="ville" />
-        <div class="form-text">Soyez le plus précis possible.</div>
+        <div class="form-text">Soyez précis.</div>
       </div>
 
       <div>
