Invitation plus précise

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div>
         <label for="lst_province" class="form-label">Province ou territoire: </label>
         <select name="lst_province" id="lst_province">
-          <option disabled="disabled" selected="selected" value="nil">--- Votre choix ---</option>
+          <option disabled="disabled" selected="selected" value="nil">--- Votre province ---</option>
           <optgroup label="Nord">
             <option value="cb">Colombie-Britannique</option>
             <option value="al">Alberta</option>
