--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <main>
     <h2>Exercice</h2>
+    <p> pas supposé !</p>
     <form method="GET" action="#">
       <div>
         <label for="nom">Nom: </label>
