Ajout texte pour l'utilisateur

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main>
     <h2>Exercice</h2>
-    <p> Nouveau bouton!</p>
+    <p> Création utilisateur</p>
     <form method="GET" action="#">
       <div>
         <label for="nom">Nom: </label>
